tests/fail/invalid_control_in_string_literal.tig
let
    var s := "This is an invalid Control-c sequence: \^0"
in
end